--- a/notebooks/phase1_out.ipynb
+++ b/notebooks/phase1_out.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9be5d03c",
+   "id": "3a8ccc6f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:07:58.773716Z",
-     "iopub.status.busy": "2025-11-02T14:07:58.773231Z",
-     "iopub.status.idle": "2025-11-02T14:07:58.778382Z",
-     "shell.execute_reply": "2025-11-02T14:07:58.777642Z"
+     "iopub.execute_input": "2025-11-02T19:49:51.234763Z",
+     "iopub.status.busy": "2025-11-02T19:49:51.234466Z",
+     "iopub.status.idle": "2025-11-02T19:49:51.239160Z",
+     "shell.execute_reply": "2025-11-02T19:49:51.238237Z"
     },
     "papermill": {
-     "duration": 0.01835,
-     "end_time": "2025-11-02T14:07:58.780619",
+     "duration": 0.018249,
+     "end_time": "2025-11-02T19:49:51.242605",
      "exception": false,
-     "start_time": "2025-11-02T14:07:58.762269",
+     "start_time": "2025-11-02T19:49:51.224356",
      "status": "completed"
     },
     "tags": [
@@ -35,16 +35,16 @@
    "id": "e29117f2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:07:58.798132Z",
-     "iopub.status.busy": "2025-11-02T14:07:58.797697Z",
-     "iopub.status.idle": "2025-11-02T14:07:58.811065Z",
-     "shell.execute_reply": "2025-11-02T14:07:58.810011Z"
+     "iopub.execute_input": "2025-11-02T19:49:51.260751Z",
+     "iopub.status.busy": "2025-11-02T19:49:51.260316Z",
+     "iopub.status.idle": "2025-11-02T19:49:51.284966Z",
+     "shell.execute_reply": "2025-11-02T19:49:51.284126Z"
     },
     "papermill": {
-     "duration": 0.023223,
-     "end_time": "2025-11-02T14:07:58.812500",
+     "duration": 0.035643,
+     "end_time": "2025-11-02T19:49:51.286343",
      "exception": false,
-     "start_time": "2025-11-02T14:07:58.789277",
+     "start_time": "2025-11-02T19:49:51.250700",
      "status": "completed"
     },
     "tags": []
@@ -126,16 +126,16 @@
    "id": "e074c1b7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:07:58.830221Z",
-     "iopub.status.busy": "2025-11-02T14:07:58.829836Z",
-     "iopub.status.idle": "2025-11-02T14:08:02.173296Z",
-     "shell.execute_reply": "2025-11-02T14:08:02.172546Z"
+     "iopub.execute_input": "2025-11-02T19:49:51.308091Z",
+     "iopub.status.busy": "2025-11-02T19:49:51.307704Z",
+     "iopub.status.idle": "2025-11-02T19:49:54.662665Z",
+     "shell.execute_reply": "2025-11-02T19:49:54.661614Z"
     },
     "papermill": {
-     "duration": 3.353329,
-     "end_time": "2025-11-02T14:08:02.174708",
+     "duration": 3.367986,
+     "end_time": "2025-11-02T19:49:54.664189",
      "exception": false,
-     "start_time": "2025-11-02T14:07:58.821379",
+     "start_time": "2025-11-02T19:49:51.296203",
      "status": "completed"
     },
     "tags": []
@@ -191,16 +191,16 @@
    "id": "e509235a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:08:02.193753Z",
-     "iopub.status.busy": "2025-11-02T14:08:02.193465Z",
-     "iopub.status.idle": "2025-11-02T14:08:02.205931Z",
-     "shell.execute_reply": "2025-11-02T14:08:02.205279Z"
+     "iopub.execute_input": "2025-11-02T19:49:54.683416Z",
+     "iopub.status.busy": "2025-11-02T19:49:54.683019Z",
+     "iopub.status.idle": "2025-11-02T19:49:54.696270Z",
+     "shell.execute_reply": "2025-11-02T19:49:54.695527Z"
     },
     "papermill": {
-     "duration": 0.023926,
-     "end_time": "2025-11-02T14:08:02.207467",
+     "duration": 0.024898,
+     "end_time": "2025-11-02T19:49:54.697680",
      "exception": false,
-     "start_time": "2025-11-02T14:08:02.183541",
+     "start_time": "2025-11-02T19:49:54.672782",
      "status": "completed"
     },
     "tags": []
@@ -277,16 +277,16 @@
    "id": "eb42de2c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:08:02.226695Z",
-     "iopub.status.busy": "2025-11-02T14:08:02.226276Z",
-     "iopub.status.idle": "2025-11-02T14:08:02.283017Z",
-     "shell.execute_reply": "2025-11-02T14:08:02.282205Z"
+     "iopub.execute_input": "2025-11-02T19:49:54.717165Z",
+     "iopub.status.busy": "2025-11-02T19:49:54.716472Z",
+     "iopub.status.idle": "2025-11-02T19:49:54.771579Z",
+     "shell.execute_reply": "2025-11-02T19:49:54.770679Z"
     },
     "papermill": {
-     "duration": 0.068793,
-     "end_time": "2025-11-02T14:08:02.284636",
+     "duration": 0.066816,
+     "end_time": "2025-11-02T19:49:54.773465",
      "exception": false,
-     "start_time": "2025-11-02T14:08:02.215843",
+     "start_time": "2025-11-02T19:49:54.706649",
      "status": "completed"
     },
     "tags": []
@@ -425,16 +425,16 @@
    "id": "366997fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:08:02.305918Z",
-     "iopub.status.busy": "2025-11-02T14:08:02.305630Z",
-     "iopub.status.idle": "2025-11-02T14:08:02.328234Z",
-     "shell.execute_reply": "2025-11-02T14:08:02.327495Z"
+     "iopub.execute_input": "2025-11-02T19:49:54.795317Z",
+     "iopub.status.busy": "2025-11-02T19:49:54.795035Z",
+     "iopub.status.idle": "2025-11-02T19:49:54.815095Z",
+     "shell.execute_reply": "2025-11-02T19:49:54.814308Z"
     },
     "papermill": {
-     "duration": 0.035744,
-     "end_time": "2025-11-02T14:08:02.329912",
+     "duration": 0.032168,
+     "end_time": "2025-11-02T19:49:54.816344",
      "exception": false,
-     "start_time": "2025-11-02T14:08:02.294168",
+     "start_time": "2025-11-02T19:49:54.784176",
      "status": "completed"
     },
     "tags": []
@@ -511,16 +511,16 @@
    "id": "95ec9e79",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:08:02.354063Z",
-     "iopub.status.busy": "2025-11-02T14:08:02.353687Z",
-     "iopub.status.idle": "2025-11-02T14:08:02.403039Z",
-     "shell.execute_reply": "2025-11-02T14:08:02.402169Z"
+     "iopub.execute_input": "2025-11-02T19:49:54.837046Z",
+     "iopub.status.busy": "2025-11-02T19:49:54.836723Z",
+     "iopub.status.idle": "2025-11-02T19:49:54.885269Z",
+     "shell.execute_reply": "2025-11-02T19:49:54.884540Z"
     },
     "papermill": {
-     "duration": 0.061872,
-     "end_time": "2025-11-02T14:08:02.404413",
+     "duration": 0.060202,
+     "end_time": "2025-11-02T19:49:54.886787",
      "exception": false,
-     "start_time": "2025-11-02T14:08:02.342541",
+     "start_time": "2025-11-02T19:49:54.826585",
      "status": "completed"
     },
     "tags": []
@@ -532,13 +532,7 @@
      "text": [
       "🔧 DATA PREPROCESSING\n",
       "========================================\n",
-      "📂 Loading intermediate dataset from Cell 3 (raw2.csv)...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "📂 Loading intermediate dataset from Cell 3 (raw2.csv)...\n",
       "✅ Preprocessing complete!\n",
       "📊 Final shape: (525, 26)\n",
       "💾 Cleaned dataset saved at: F:\\RetailSense_Lite\\data\\processed\\cleaned_data.csv\n"
@@ -605,16 +599,16 @@
    "id": "d8eeb4b9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:08:02.427278Z",
-     "iopub.status.busy": "2025-11-02T14:08:02.426879Z",
-     "iopub.status.idle": "2025-11-02T14:08:03.125877Z",
-     "shell.execute_reply": "2025-11-02T14:08:03.125100Z"
+     "iopub.execute_input": "2025-11-02T19:49:54.909474Z",
+     "iopub.status.busy": "2025-11-02T19:49:54.909205Z",
+     "iopub.status.idle": "2025-11-02T19:49:55.692009Z",
+     "shell.execute_reply": "2025-11-02T19:49:55.690882Z"
     },
     "papermill": {
-     "duration": 0.713123,
-     "end_time": "2025-11-02T14:08:03.127354",
+     "duration": 0.7965,
+     "end_time": "2025-11-02T19:49:55.693824",
      "exception": false,
-     "start_time": "2025-11-02T14:08:02.414231",
+     "start_time": "2025-11-02T19:49:54.897324",
      "status": "completed"
     },
     "tags": []
@@ -625,7 +619,13 @@
      "output_type": "stream",
      "text": [
       "📦 INVENTORY ANALYSIS (Phase 1 - Cleaned Data)\n",
-      "==================================================\n",
+      "==================================================\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "✅ Loaded cleaned data: F:\\RetailSense_Lite\\data\\processed\\cleaned_data.csv\n",
       "📊 Records: 525, Columns: 26\n",
       "📊 Average Stock on Hand: 330.86 units\n",
@@ -752,16 +752,16 @@
    "id": "e3f12636",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:08:03.151815Z",
-     "iopub.status.busy": "2025-11-02T14:08:03.151333Z",
-     "iopub.status.idle": "2025-11-02T14:08:03.180488Z",
-     "shell.execute_reply": "2025-11-02T14:08:03.179599Z"
+     "iopub.execute_input": "2025-11-02T19:49:55.716900Z",
+     "iopub.status.busy": "2025-11-02T19:49:55.716615Z",
+     "iopub.status.idle": "2025-11-02T19:49:55.742762Z",
+     "shell.execute_reply": "2025-11-02T19:49:55.741964Z"
     },
     "papermill": {
-     "duration": 0.042763,
-     "end_time": "2025-11-02T14:08:03.181975",
+     "duration": 0.039668,
+     "end_time": "2025-11-02T19:49:55.744143",
      "exception": false,
-     "start_time": "2025-11-02T14:08:03.139212",
+     "start_time": "2025-11-02T19:49:55.704475",
      "status": "completed"
     },
     "tags": []
@@ -954,16 +954,16 @@
    "id": "9b58bc29",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:08:03.209400Z",
-     "iopub.status.busy": "2025-11-02T14:08:03.209128Z",
-     "iopub.status.idle": "2025-11-02T14:08:03.688838Z",
-     "shell.execute_reply": "2025-11-02T14:08:03.687884Z"
+     "iopub.execute_input": "2025-11-02T19:49:55.768761Z",
+     "iopub.status.busy": "2025-11-02T19:49:55.768359Z",
+     "iopub.status.idle": "2025-11-02T19:49:56.249555Z",
+     "shell.execute_reply": "2025-11-02T19:49:56.248759Z"
     },
     "papermill": {
-     "duration": 0.495332,
-     "end_time": "2025-11-02T14:08:03.690438",
+     "duration": 0.49631,
+     "end_time": "2025-11-02T19:49:56.251252",
      "exception": false,
-     "start_time": "2025-11-02T14:08:03.195106",
+     "start_time": "2025-11-02T19:49:55.754942",
      "status": "completed"
     },
     "tags": []
@@ -1176,8 +1176,8 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 9.417458,
-   "end_time": "2025-11-02T14:08:05.089639",
+   "duration": 9.639677,
+   "end_time": "2025-11-02T19:49:57.553950",
    "environment_variables": {},
    "exception": null,
    "input_path": "F:\\RetailSense_Lite\\notebooks\\phase1_eda.ipynb",
@@ -1186,7 +1186,7 @@
     "INPUT_CSV": "F:\\RetailSense_Lite\\data\\uploaded\\uploaded_data.csv",
     "RETAILSENSE_BASE_DIR": "F:\\RetailSense_Lite"
    },
-   "start_time": "2025-11-02T14:07:55.672181",
+   "start_time": "2025-11-02T19:49:47.914273",
    "version": "2.6.0"
   }
  },
