--- a/notebooks/phase2_out.ipynb
+++ b/notebooks/phase2_out.ipynb
@@ -6,16 +6,16 @@
    "id": "0bb73213",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:08:12.474815Z",
-     "iopub.status.busy": "2025-11-02T14:08:12.474364Z",
-     "iopub.status.idle": "2025-11-02T14:08:12.489062Z",
-     "shell.execute_reply": "2025-11-02T14:08:12.488283Z"
+     "iopub.execute_input": "2025-11-02T19:50:05.347988Z",
+     "iopub.status.busy": "2025-11-02T19:50:05.347628Z",
+     "iopub.status.idle": "2025-11-02T19:50:05.360874Z",
+     "shell.execute_reply": "2025-11-02T19:50:05.360201Z"
     },
     "papermill": {
-     "duration": 0.032582,
-     "end_time": "2025-11-02T14:08:12.491767",
+     "duration": 0.028809,
+     "end_time": "2025-11-02T19:50:05.363062",
      "exception": false,
-     "start_time": "2025-11-02T14:08:12.459185",
+     "start_time": "2025-11-02T19:50:05.334253",
      "status": "completed"
     },
     "tags": []
@@ -77,16 +77,16 @@
    "id": "37f28ddd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:08:12.520285Z",
-     "iopub.status.busy": "2025-11-02T14:08:12.520004Z",
-     "iopub.status.idle": "2025-11-02T14:08:16.841029Z",
-     "shell.execute_reply": "2025-11-02T14:08:16.840145Z"
+     "iopub.execute_input": "2025-11-02T19:50:05.382217Z",
+     "iopub.status.busy": "2025-11-02T19:50:05.381942Z",
+     "iopub.status.idle": "2025-11-02T19:50:09.529673Z",
+     "shell.execute_reply": "2025-11-02T19:50:09.528723Z"
     },
     "papermill": {
-     "duration": 4.336253,
-     "end_time": "2025-11-02T14:08:16.842356",
+     "duration": 4.159492,
+     "end_time": "2025-11-02T19:50:09.531335",
      "exception": false,
-     "start_time": "2025-11-02T14:08:12.506103",
+     "start_time": "2025-11-02T19:50:05.371843",
      "status": "completed"
     },
     "tags": []
@@ -107,7 +107,7 @@
       "\n",
       "🚀 RETAILSENSE PHASE 2: FEATURE ENGINEERING & MODELS INITIATED\n",
       "============================================================\n",
-      "📅 Started at: 2025-11-02 19:38:16\n"
+      "📅 Started at: 2025-11-03 01:20:09\n"
      ]
     }
    ],
@@ -173,16 +173,16 @@
    "id": "0c32e7e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:08:16.863048Z",
-     "iopub.status.busy": "2025-11-02T14:08:16.862555Z",
-     "iopub.status.idle": "2025-11-02T14:08:16.884062Z",
-     "shell.execute_reply": "2025-11-02T14:08:16.883050Z"
+     "iopub.execute_input": "2025-11-02T19:50:09.552869Z",
+     "iopub.status.busy": "2025-11-02T19:50:09.552395Z",
+     "iopub.status.idle": "2025-11-02T19:50:09.574590Z",
+     "shell.execute_reply": "2025-11-02T19:50:09.573438Z"
     },
     "papermill": {
-     "duration": 0.033763,
-     "end_time": "2025-11-02T14:08:16.885445",
+     "duration": 0.033059,
+     "end_time": "2025-11-02T19:50:09.575941",
      "exception": false,
-     "start_time": "2025-11-02T14:08:16.851682",
+     "start_time": "2025-11-02T19:50:09.542882",
      "status": "completed"
     },
     "tags": []
@@ -357,16 +357,16 @@
    "id": "ab54005e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:08:16.904688Z",
-     "iopub.status.busy": "2025-11-02T14:08:16.904409Z",
-     "iopub.status.idle": "2025-11-02T14:08:17.194607Z",
-     "shell.execute_reply": "2025-11-02T14:08:17.193746Z"
+     "iopub.execute_input": "2025-11-02T19:50:09.599364Z",
+     "iopub.status.busy": "2025-11-02T19:50:09.598991Z",
+     "iopub.status.idle": "2025-11-02T19:50:09.864687Z",
+     "shell.execute_reply": "2025-11-02T19:50:09.863932Z"
     },
     "papermill": {
-     "duration": 0.301929,
-     "end_time": "2025-11-02T14:08:17.196054",
+     "duration": 0.277485,
+     "end_time": "2025-11-02T19:50:09.866094",
      "exception": false,
-     "start_time": "2025-11-02T14:08:16.894125",
+     "start_time": "2025-11-02T19:50:09.588609",
      "status": "completed"
     },
     "tags": []
@@ -395,16 +395,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Created 60 rolling features\n",
-      "🔄 Creating price-related features...\n"
+      "✅ Created 60 rolling features"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "🔄 Creating price-related features...\n",
       "✅ Created 6 price-related features\n",
-      "🔄 Creating inventory features...\n",
+      "🔄 Creating inventory features...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "✅ Created 6 inventory features\n",
       "🔄 Encoding categorical features...\n",
       "✅ Created 6 categorical features\n",
@@ -487,16 +494,16 @@
    "id": "3593d065",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:08:17.228085Z",
-     "iopub.status.busy": "2025-11-02T14:08:17.227723Z",
-     "iopub.status.idle": "2025-11-02T14:08:19.002184Z",
-     "shell.execute_reply": "2025-11-02T14:08:19.001272Z"
+     "iopub.execute_input": "2025-11-02T19:50:09.888647Z",
+     "iopub.status.busy": "2025-11-02T19:50:09.888363Z",
+     "iopub.status.idle": "2025-11-02T19:50:11.247850Z",
+     "shell.execute_reply": "2025-11-02T19:50:11.246828Z"
     },
     "papermill": {
-     "duration": 1.795795,
-     "end_time": "2025-11-02T14:08:19.003648",
+     "duration": 1.372035,
+     "end_time": "2025-11-02T19:50:11.249498",
      "exception": false,
-     "start_time": "2025-11-02T14:08:17.207853",
+     "start_time": "2025-11-02T19:50:09.877463",
      "status": "completed"
     },
     "tags": []
@@ -518,7 +525,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ ARIMA trained for Apples\n",
+      "✅ ARIMA trained for Apples"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "   AIC: 1225.18\n",
       "   Next 4 weeks forecast: [218.13 217.87 217.87 217.87]\n",
       "🔄 Training Prophet Model...\n"
@@ -528,14 +542,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "19:38:17 - cmdstanpy - INFO - Chain [1] start processing\n"
+      "01:20:10 - cmdstanpy - INFO - Chain [1] start processing\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "19:38:17 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "01:20:10 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -626,16 +640,16 @@
    "id": "d65995cb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:08:19.028784Z",
-     "iopub.status.busy": "2025-11-02T14:08:19.028498Z",
-     "iopub.status.idle": "2025-11-02T14:08:21.921754Z",
-     "shell.execute_reply": "2025-11-02T14:08:21.921183Z"
+     "iopub.execute_input": "2025-11-02T19:50:11.275142Z",
+     "iopub.status.busy": "2025-11-02T19:50:11.274865Z",
+     "iopub.status.idle": "2025-11-02T19:50:14.186076Z",
+     "shell.execute_reply": "2025-11-02T19:50:14.185317Z"
     },
     "papermill": {
-     "duration": 2.908589,
-     "end_time": "2025-11-02T14:08:21.923326",
+     "duration": 2.925896,
+     "end_time": "2025-11-02T19:50:14.187633",
      "exception": false,
-     "start_time": "2025-11-02T14:08:19.014737",
+     "start_time": "2025-11-02T19:50:11.261737",
      "status": "completed"
     },
     "tags": []
@@ -765,16 +779,16 @@
    "id": "53d39ac0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:08:21.965137Z",
-     "iopub.status.busy": "2025-11-02T14:08:21.964692Z",
-     "iopub.status.idle": "2025-11-02T14:08:23.873128Z",
-     "shell.execute_reply": "2025-11-02T14:08:23.872377Z"
+     "iopub.execute_input": "2025-11-02T19:50:14.232596Z",
+     "iopub.status.busy": "2025-11-02T19:50:14.232146Z",
+     "iopub.status.idle": "2025-11-02T19:50:16.026382Z",
+     "shell.execute_reply": "2025-11-02T19:50:16.025659Z"
     },
     "papermill": {
-     "duration": 1.930439,
-     "end_time": "2025-11-02T14:08:23.874392",
+     "duration": 1.817922,
+     "end_time": "2025-11-02T19:50:16.027791",
      "exception": false,
-     "start_time": "2025-11-02T14:08:21.943953",
+     "start_time": "2025-11-02T19:50:14.209869",
      "status": "completed"
     },
     "tags": []
@@ -898,16 +912,16 @@
    "id": "76fdf3a7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:08:23.907369Z",
-     "iopub.status.busy": "2025-11-02T14:08:23.906975Z",
-     "iopub.status.idle": "2025-11-02T14:08:24.493890Z",
-     "shell.execute_reply": "2025-11-02T14:08:24.492930Z"
+     "iopub.execute_input": "2025-11-02T19:50:16.056074Z",
+     "iopub.status.busy": "2025-11-02T19:50:16.055646Z",
+     "iopub.status.idle": "2025-11-02T19:50:16.638100Z",
+     "shell.execute_reply": "2025-11-02T19:50:16.637352Z"
     },
     "papermill": {
-     "duration": 0.606834,
-     "end_time": "2025-11-02T14:08:24.495647",
+     "duration": 0.598781,
+     "end_time": "2025-11-02T19:50:16.639812",
      "exception": false,
-     "start_time": "2025-11-02T14:08:23.888813",
+     "start_time": "2025-11-02T19:50:16.041031",
      "status": "completed"
     },
     "tags": []
@@ -1017,16 +1031,16 @@
    "id": "2ee80b0b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:08:24.529843Z",
-     "iopub.status.busy": "2025-11-02T14:08:24.529464Z",
-     "iopub.status.idle": "2025-11-02T14:08:24.569618Z",
-     "shell.execute_reply": "2025-11-02T14:08:24.568671Z"
+     "iopub.execute_input": "2025-11-02T19:50:16.676717Z",
+     "iopub.status.busy": "2025-11-02T19:50:16.676319Z",
+     "iopub.status.idle": "2025-11-02T19:50:16.709850Z",
+     "shell.execute_reply": "2025-11-02T19:50:16.709003Z"
     },
     "papermill": {
-     "duration": 0.058582,
-     "end_time": "2025-11-02T14:08:24.571396",
+     "duration": 0.055582,
+     "end_time": "2025-11-02T19:50:16.711625",
      "exception": false,
-     "start_time": "2025-11-02T14:08:24.512814",
+     "start_time": "2025-11-02T19:50:16.656043",
      "status": "completed"
     },
     "tags": []
@@ -1137,16 +1151,16 @@
    "id": "6ad9e16b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:08:24.621976Z",
-     "iopub.status.busy": "2025-11-02T14:08:24.621529Z",
-     "iopub.status.idle": "2025-11-02T14:08:24.635781Z",
-     "shell.execute_reply": "2025-11-02T14:08:24.635141Z"
+     "iopub.execute_input": "2025-11-02T19:50:16.762530Z",
+     "iopub.status.busy": "2025-11-02T19:50:16.762096Z",
+     "iopub.status.idle": "2025-11-02T19:50:16.777136Z",
+     "shell.execute_reply": "2025-11-02T19:50:16.776539Z"
     },
     "papermill": {
-     "duration": 0.042776,
-     "end_time": "2025-11-02T14:08:24.638928",
+     "duration": 0.042815,
+     "end_time": "2025-11-02T19:50:16.778838",
      "exception": false,
-     "start_time": "2025-11-02T14:08:24.596152",
+     "start_time": "2025-11-02T19:50:16.736023",
      "status": "completed"
     },
     "tags": []
@@ -1287,16 +1301,16 @@
    "id": "a59e9d17",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-02T14:08:24.674330Z",
-     "iopub.status.busy": "2025-11-02T14:08:24.674040Z",
-     "iopub.status.idle": "2025-11-02T14:08:24.682774Z",
-     "shell.execute_reply": "2025-11-02T14:08:24.681996Z"
+     "iopub.execute_input": "2025-11-02T19:50:16.820669Z",
+     "iopub.status.busy": "2025-11-02T19:50:16.820378Z",
+     "iopub.status.idle": "2025-11-02T19:50:16.829545Z",
+     "shell.execute_reply": "2025-11-02T19:50:16.828748Z"
     },
     "papermill": {
-     "duration": 0.025994,
-     "end_time": "2025-11-02T14:08:24.684494",
+     "duration": 0.026234,
+     "end_time": "2025-11-02T19:50:16.830915",
      "exception": false,
-     "start_time": "2025-11-02T14:08:24.658500",
+     "start_time": "2025-11-02T19:50:16.804681",
      "status": "completed"
     },
     "tags": []
@@ -1319,7 +1333,7 @@
       "🎉 ALL VALIDATIONS PASSED! ✅\n",
       "🚀 Ready to proceed to Phase 3: Business Layer & Dashboard\n",
       "------------------------------------------------------------\n",
-      "📅 Validation completed at: 2025-11-02 19:38:24\n",
+      "📅 Validation completed at: 2025-11-03 01:20:16\n",
       "\n"
      ]
     }
@@ -1434,14 +1448,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 16.226004,
-   "end_time": "2025-11-02T14:08:26.010550",
+   "duration": 15.920272,
+   "end_time": "2025-11-02T19:50:18.153584",
    "environment_variables": {},
    "exception": null,
    "input_path": "F:\\RetailSense_Lite\\notebooks\\phase2_core_models.ipynb",
    "output_path": "F:\\RetailSense_Lite\\notebooks\\phase2_out.ipynb",
    "parameters": {},
-   "start_time": "2025-11-02T14:08:09.784546",
+   "start_time": "2025-11-02T19:50:02.233312",
    "version": "2.6.0"
   }
  },
